syntax = "proto3";
package video;
option go_package = "./video";

service VideoService {
  rpc GetVideoFeed(GetVideoFeedReq) returns(GetVideoFeedResp);   // 获取视频流
}

message GetVideoFeedReq {
//  int64 app_user_id = 1;
  int64 latest_time = 1;  //限制返回视频的最新投稿时间戳，精确到秒，不填表示当前时间
//  int64 count = 3;
  string token = 2; // 登录用户设置
}

message GetVideoFeedResp {
  int64 status_code = 1;
  string status_msg = 2;
  repeated VideoInfo video_infos = 3;   // 视频列表
  int64 next_time = 4;  // 本次返回的视频中，发布最早的时间，作为下次请求时的latest_time
}


message VideoBaseInfo {
  int64 user_id = 1;  //作者id
  string play_url = 2;  // 视频播放地址
  string cover_url = 3;  // 视频封面地址
  string title = 4; // 视频标题
}

message VideoInfo {
  int64 video_id = 1;  //视频唯一标识
  User author = 2; // 视频作者信息
  string play_url = 3;  // 视频播放地址
  string cover_url = 4;  // 视频封面地址
  string title = 5; // 视频标题
  int64 favorite_count = 6; // 视频的点赞总数
  int64 comment_count = 7; // 视频的评论总数
  bool is_favorite = 8;  // true-已点赞，false-未点赞
}


message GetVideoListByUserIdReq {
  int64 app_user_id = 1;
  int64 user_id = 2;
}

message GetVideoListByUserIdResp {
  int64 status_code = 1;
  string status_msg = 2;
  repeated VideoInfo video_infos = 3;
}

message User {

  int64 id = 1; // 用户id

  string name = 2; // 用户名称
  int64 follow_count = 3; // 关注总数

  int64 follower_count = 4; // 粉丝总数

  bool is_follow = 5; // true-已关注，false-未关

  string avatar = 6; //用户头像

  string background_image = 7; //用户个人页顶部大图

  string signature = 8; //个人简介

  int64 total_favorited = 9; //获赞数量

  int64 work_count = 10; //作品数

  int64 favorite_count = 11; //点赞数量
}
